fixex deprecation warnings